# nexus-pdf

./: README.md  env.example  pyproject.toml
app/: config.py  main.py  server.py
app/db/: client.py  db.py
app/db/collections/: files.py
app/queue/: queue.py  workers.py
app/utils/: __init__.py  ai_call.py  errors.py  file.py  logger.py  validators.py
