[project]
name = "nexus-pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.116.1",
    "pdf2image>=1.17.0",
    "pymongo>=4.13.2",
    "python-dotenv>=1.1.1",
    "rq>=2.4.1",
    "uvicorn>=0.35.0",
]
